--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +18,13 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 10px
+  /* justify-content: center; */
+  /* align-items: center; */
+  
 }
 
 a {
@@ -22,4 +33,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  /* margin:0px 10px */
 }
