--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
@@ -20,8 +21,22 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
+.header {
+  display: flex;
+  font-size: larger;
+  font-weight: bold;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 10px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +48,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
